--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# thiserror = "1.0.37"
+anyhow = "1.0.66"
 # derive_more = "0.99.17"
 itertools = "0.10.5"
